fixed an issue with paper option label overflowing

--- a/assam_gk_official/papers/style.css
+++ b/assam_gk_official/papers/style.css
@@ -310,3 +310,8 @@ a:link{
     animation-duration: 200ms;
     animation-iteration-count: 5;
 }
+
+label{
+    position: fixed;
+    width: 80%;
+}
